--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <img src="/logo.png" alt="Penta Logo" style="height:16px; vertical-align:middle;"> Penta
+  <title>Penta</title> <!-- Set page title -->
+  <link rel="icon" href="/logo.png" />
 </head>
 
 <body>
