--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/penta.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Penta</title> <!-- Set page title -->
+  <title>Penta-Software</title> <!-- Set page title -->
   <link rel="icon" href="/logo.png" />
 </head>
 
